--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="ambiente">
         <div class="profile">
-
+            <div class="profile-pic"></div>
         </div>
     </div>
 </body>
