--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 </head>
 <body>
     <div class="ambiente">
-        <div class="profile">
-            <div class="profile-pic"></div>
+        <div class="header"></div>
+        <div class="profile-box">
+            <div class="profile">
+                <div class="profile-pic"></div>
+            </div>
         </div>
     </div>
 </body>
