--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 </head>
 <body>
     <div class="ambiente">
-        <div class="header"></div>
+        <div class="header">
+            <div class="profile-pic"></div>
+        </div>
         <div class="profile-box">
             <div class="profile">
-                <div class="profile-pic"></div>
+                
             </div>
         </div>
     </div>
