--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Biblioteca Material Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
+  
+    <!-- Fonte Rubik -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <title>Linkery</title>
@@ -12,7 +21,10 @@
 <body>
     <div class="ambiente">
         <div class="header">
-            <div class="profile-pic"></div>
+            <section>
+                <i class="material-icons menu">menu</i>
+                <div class="profile-pic"></div>
+            </section>
         </div>
         <div class="profile-box">
             <div class="profile">
