--- a/index.html
+++ b/index.html
@@ -27,8 +27,24 @@
             </section>
         </div>
         <div class="profile-box">
-            <div class="profile">
-                
+            <div class="profile-area">
+                <div class="profile-info">
+                    <div class="username">MARCIODINIZ7X _</div>
+                    <div class="profile-stats">
+                        <div class="posts">
+                            <div class="leg">Posts</div>
+                            <div class="num">0</div>
+                        </div>
+                        <div class="followers">
+                            <div class="leg">Seguidores</div>
+                            <div class="num">0</div>
+                        </div>
+                        <div class="following">
+                            <div class="leg">Seguindo</div>
+                            <div class="num">0</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
