--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="profile-box">
             <div class="profile-area">
-                <div class="profile-info">
+                <div class="elem-area">
                     <div class="elems01">
                         <div class="circle01">
                             <div class="circle02"></div>
@@ -36,6 +36,8 @@
                         <div class="circle03"></div>
                         <div class="circle04"></div>
                     </div>
+                </div>
+                <div class="profile-info">
                     <section>
                         <div class="username">@MARCIODINIZ7X</div>
                     <div class="profile-stats">
@@ -63,20 +65,20 @@
         </div>
         <div class="buttons">
             <div class="btn-box but1">
-                <div class="box"></div>
-                <div class="button"></div>
+                <div class="icon"></div>
+                <div class="text">GitHub</div>
             </div>
             <div class="btn-box but2">
-                <div class="box"></div>
-                <div class="button"></div>
+                <div class="icon"></div>
+                <div class="text">Linkedin</div>
             </div>
             <div class="btn-box but3">
-                <div class="box"></div>
-                <div class="button"></div>
+                <div class="icon"></div>
+                <div class="text">WhatsApp</div>
             </div>
             <div class="btn-box but4">
-                <div class="box"></div>
-                <div class="button"></div>
+                <div class="icon"></div>
+                <div class="text">Linkery</div>
             </div>
         </div>
         <footer> <p>Copyright &copy; 2023 Linkery CO.</p> </footer>
