--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <div class="lua">
             <div class="figura"></div>
             <div class="modelador"></div>
+            <div class="modelador2"></div>
         </div>
         <div class="buttons">
             <div class="btn-box but1">
