--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
             <div class="btn-box but4">
                 <div class="icon"></div>
-                <div class="text">Linkery</div>
+                <div class="text">Instagram</div>
             </div>
             <footer> <p>Copyright &copy; 2023 Linkery CO.</p> </footer>
         </div>
