--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
     <div class="ambiente">
         <div class="header">
             <section>
-                <i class="material-icons menu">menu</i>
-                <div class="username">LINKERY</div>
-                <div class="profile-pic"></div>
+                <!-- <i class="material-icons menu">menu</i> -->
+                <div class="logo-name">LINKERY</div>
+                <div class="profile-pic-user">
+                    <div class="user">MARCIODINIZ7X</div>
+                    <div class="profile-pic"></div>
+                </div>
             </section>
             
             <div class="profile-info">
