--- a/index.html
+++ b/index.html
@@ -50,7 +50,14 @@
                 </section>
                 
             </div>
+            <div class="faixa">
+                <div class="a"></div>
+                <div class="b"></div>
+                <div class="c"></div>
+                <div class="d"></div>
+            </div>
         </div>
+        
 
 
         <div class="buttons">
