--- a/index.html
+++ b/index.html
@@ -28,24 +28,16 @@
         <div class="header">
             <section>
                 <!-- <i class="material-icons menu">menu</i> -->
-                <div class="logo-name">LINKERY</div>
                 <div class="profile-pic-user">
-                    <div class="user">marciodiniz7x</div>
                     <div class="profile-pic"></div>
+                    <div class="user">
+                        <div class="name1">Márcio</div>
+                        <div class="name2">Diniz</div>
+                    </div>
                 </div>
             </section>
             
             <div class="profile-info">
-
-                <nav>
-                    <ul class="menu-superior">
-                      <a href="#">Início</a>
-                      <a href="#">Login</a>
-                      <a href="#">Inscrever-se</a>
-                      <a href="#">Sobre</a>
-                    </ul>
-                  </nav>
-                  
 
                 <!-- <section>
                 <div class="profile-stats">
